tests/snapshots/file@variable@duplicate_parameter.lox.snap
---
source: tests/common/mod.rs
description: "fun foo(arg,\n        arg) { // Error at 'arg': Already a variable with this name in this scope.\n  \"body\";\n}\n"
input_file: crafting_interpreters_test_files/variable/duplicate_parameter.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × variable with name 'arg' is already defined in this scope
   ╭─[2:9]
 1 │ fun foo(arg,
 2 │         arg) { // Error at 'arg': Already a variable with this name in this scope.
   ·         ─┬─
   ·          ╰── here
 3 │   "body";
   ╰────
Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false', found '}'
   ╭─[4:1]
 3 │   "body";
 4 │ }
   · ┬
   · ╰── here
   ╰────
